<resources>
    <string name="app_name">Hyderabad Metro Navigator</string>
    <string name="title_home">Line Info</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_about">About</string>
    <string name="title_search_route">Search Route</string>
    <string name="title_metro_map">Metro Map</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="title_station">Stations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="station_select">Select Station</string>
    <string name="type_text_to_select_stations">Type station name</string>
    <string name="find_route">Find Route</string>
    <string name="title_activity_search_station">SearchStationActivity</string>
    <string name="station">Select Station</string>
    <string name="amenityType">amenity_type</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_green">Green Line</string>
    <string name="title_red">Red Line</string>
    <string name="title_blue">Blue Line</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="empty" />
    <string name="title_activity_line_information">LineInformationActivity</string>
    <string name="train_freq">Frequency of Trains: 15 mins</string>
    <string name="lineInfo">Red Line</string>
    <string name="title_activity_main2">Hyderabad Metro Navigator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shareText">"Hey check out my app at: https://play.google.com/store/apps/details?id=com.pstech.hydmetro"</string>
    <string name="title_news">Metro in news</string>
    <string name="title_stories">Metro Stories</string>
    <string name="send_to">Send To ...</string>
    <string name="active_station">Stations : </string>
    <string name="title_km"> km</string>
    <string name="inactive_station">UnOperational Stations : </string>
    <string name="title_feedback">Feedback</string>
    <string name="emailId">care.pstechnology@gmail.com</string>

    <string name="title_activity_fulls_screen_map">FullsScreenMapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_full_map_view">Full Screen Map</string>


</resources>
